--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/master-atul/scrapper-x/issues"
   },
-  "homepage": "https://github.com/master-atul/scrapper-x#readme"
+  "homepage": "https://github.com/master-atul/scrapper-x#readme",
+  "dependencies": {
+    "cheerio": "^0.19.0",
+    "lodash": "^3.10.1"
+  }
 }
