--- a/scrapperX-Example/package.json
+++ b/scrapperX-Example/package.json
@@ -7,14 +7,13 @@
   },
   "dependencies": {
     "body-parser": "~1.12.4",
-    "cheerio": "^0.19.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
-    "lodash": "^3.10.1",
     "morgan": "~1.5.3",
     "request": "^2.64.0",
+    "scrapper-x": "^1.0.0",
     "serve-favicon": "~2.2.1"
   }
 }
